--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ p {
     padding: 1.8rem 0 0 0.2rem;
 }
 
-@media (max-width: 800px) {
+@media (max-width: ) {
     .main_container {
         width: 37.5rem;
         height: auto;
