--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ body {
     border-radius: 50%;
 }
 
-.heading {
+h1 {
     font-size: 2rem;
     font-weight: 600;
     padding: 1.3rem 0.2rem 0 0.2rem;
